addons/packages/gatekeeper/test/fixtures/test-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test
  labels:
    owner: bearcanoe
